--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>Manage student details efficiently</p>
             
             <div class="profile-section">
-                <img src="C:\Users\Admin\Desktop\New folder (3)\WhatsApp Image 2025-10-27 at 10.32.30.jpeg" class="profile-image">
+                <img src="WhatsApp Image 2025-10-27 at 10.32.30.jpeg" class="profile-image">
             </div>
             
             <div class="menu-container">
@@ -101,4 +101,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
